Details
-
Bug
-
Resolution: Fixed
-
Minor
-
0.4.15-dev-4498-g860d354 https://github.com/reactos/reactos/commit/860d3544af58d031cc79c05e81b13e6b7419a7b6
Description
reactos-bootcd-0.4.15-dev-5517-g9762ef9-x86-gcc-lin-dbg
Sort by type using header does not work well : need to click "twice" to change the sort order.
Sort by value using header does not work.
Multiple causes :
- item 1 :
REGRESSION due to Guilty Commit : https://github.com/reactos/reactos/commit/860d3544af58d031cc79c05e81b13e6b7419a7b6
in 0.4.15-dev-4498-g860d354, related to CORE-11846
case 4: /* comments */ |
to be replaced by
case 3: /* Value */ |
here :https://git.reactos.org/?p=reactos.git;a=blob;f=dll/win32/shell32/folders/CRegFolder.cpp#l756
Fix is similar to https://github.com/reactos/reactos/pull/4944
- item 2 :
in GetDefaultColumnState :
| if (iColumn >= 2) |
should likely be
| if (iColumn > 2) |
Sort in Registry Folder does not work, but to be managed in a separate ticket : CORE-18762
Attachments
Issue Links
- blocks
-
CORE-11846 [shell32] My Computer: Type column lists incorrect types
-
- Resolved
-
- relates to
-
CORE-18501 Control Panel, Registry Folder : "Detailed List" view issues
-
- Resolved
-
-
CORE-18762 Sort does not work in Registry Folder
-
- Resolved
-