[SHELL32] Fix regression mentioned in https://jira.reactos.org/browse/CORE-18760 Correct the iColumn value in GetDetailsof and correct the check in GetDefaultColumnState